tmux now opens new windows in same pwd as current window

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,10 @@ set -g pane-base-index 1
 
 set -g status-bg colour61
 set -g status-fg colour231
+
+# Make new windows open in the same path as the current window
+bind c new-window -c "#{pane_current_path}"
+
+# (Optional) Make new panes open in the same path too
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
